tests/integration/commands/snapshots/integration__commands__format__LONG_FRACTION.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
439043098908430980982412345678009987.6654433231123413847890813843897873986381727319297072310970972784365768257862
stdout ---
439043098908430980982412345678009987.6654433231123413847890813843897873986381727319297072310970972784365768257862

stderr ---
