tests/integration/commands/snapshots/integration__commands__format__LONG_INTEGER.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
4390430989084309809824123456780099876654433231123413847890813843897873986381727319297072310970972784365768257862
stdout ---
4390430989084309809824123456780099876654433231123413847890813843897873986381727319297072310970972784365768257862

stderr ---
