tests/integration/commands/snapshots/integration__commands__format__NESTED_OBJECT_SINGLE_KEY.snap
---
source: tests/integration/commands/format.rs
expression: output.stdout
---
{
    "rust": {
        "rust": {
            "rust": {
                "rust": null
            }
        }
    }
}
