tests/integration/commands/snapshots/integration__commands__format__OBJECT_WITH_LONG_KEY_AND_ARR_VAL.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---

{
    "reallllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllyyy-long-key": ["should expand"]
}

stdout ---
{
  "reallllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllyyy-long-key": [
    "should expand"
  ]
}

stderr ---
