tests/integration/commands/snapshots/integration__commands__format__STANDALONE_STRING.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
"string"
stdout ---
"string"

stderr ---
