tests/integration/commands/snapshots/integration__commands__format__STANDALONE_TRUE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
true
stdout ---
true

stderr ---
